Removed .news div (since it is repeating info), fixed navbar alignment in danimoth
It would be good to be able to position some sort of info box in that location for
danimoth's theme (even e.g. the lastupdated/accuratefor infobox)

--- a/i2p2www/static/styles/danimoth.css
+++ b/i2p2www/static/styles/danimoth.css
@@ -33,7 +33,7 @@ div#cssmenu .right {
 
 nav.navigation {
     position: absolute;
-    margin: 260px 0 20px 20px;
+    margin: 13px 0 20px 20px;
     width: 180px;
     z-index: 1;
 }
